--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,14 @@ plugins {
 }
 
 android {
+    signingConfigs {
+        release {
+            storeFile file('/Users/sayalikulkarni/Desktop/playverse')
+            storePassword '123456'
+            keyAlias 'playverse'
+            keyPassword '123456'
+        }
+    }
     compileSdk 32
 
     defaultConfig {
@@ -17,7 +25,7 @@ android {
         minSdk 21
         targetSdk 32
         versionCode 1
-        versionName "4.0.0"
+        versionName "2.5.678"
         multiDexEnabled  true
         vectorDrawables.useSupportLibrary true
 
@@ -28,7 +36,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
